feat:add script sql