@@ -108,6 +108,16 @@
                     <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/4.0.0/mockito-core-4.0.0.jar -XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage</argLine>
                 </configuration>
             </plugin>
+                   <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+            <configuration>
+                <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/4.0.0/mockito-core-4.0.0.jar -XX:+EnableDynamicAgentLoading -Djdk.instrument.traceUsage</argLine>
+                <forkCount>1</forkCount>
+                <reuseForks>false</reuseForks>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
 </project>
